--- a/sixdegrees/pom.xml
+++ b/sixdegrees/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>bigfoot.code.test</groupId>
+    <groupId>salesforce.code.test</groupId>
     <artifactId>six-degrees</artifactId>
     <version>1.0</version>
 
